--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form > * + * {
+  margin-top: 20px;
 }
