--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+    scroll-behavior: smooth;
+  }
+  
+  body {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  
 form {
   display: flex;
   flex-direction: column;
