--- a/style.css
+++ b/style.css
@@ -9,9 +9,27 @@ body {
 form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  
 }
-
+h2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
 form > * + * {
   margin-top: 20px;
 }
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-section{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
